@@ -1,3 +1,9 @@
+2009-07-02  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-12-07
+	* added table of dqm shm cells and moved resetting of discard flag
+	* for dqm up to reflect timing of actions
+	
 2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-12-06
